--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ service:
   - docker
 
 env:
-  - SHA=$(git rev-parse HEAD)
-  - CLOUDSDK_DISABLE-PROMPTS=1
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE-PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
